--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#21caff">
     <link rel="icon" href="https://bruhdev.ml/img/BruhDev.jpg">
   </head>
-  <frameset rows="*">
-    <frame frameborder=0 src="https://bruhdev.jetbrains.space/" scrolling="auto" noresize>
-  </frameset>
 </html>
+<script>
+  location.href = "bruhdev.jetbrains.space";
+</script>
