--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   </head>
 </html>
 <script>
-  location.href = "bruhdev.jetbrains.space";
+  location.href = "https://bruhdev.jetbrains.space";
 </script>
